--- a/css/style.css
+++ b/css/style.css
@@ -313,6 +313,7 @@ section {
   width: 40vh;
   background: url("../img/logo.webp") 50% / contain no-repeat;
   padding-top: 24vh;
+  animation: logo_rotate 10s linear infinite;
   transition: 1s;
 }
 #about {
@@ -496,11 +497,6 @@ section {
 @media (min-width: 1366px) {
   #menu {
     margin-top: 0px;
-  }
-  #main_img:hover {
-    transform: rotate3d(2, 1, 0, 180deg);
-    height: 50vh;
-    width: 50vh;
   }
   .circle_photo:hover {
     transform: rotate3d(0, 1, 0, 15deg);
